# ncpamixer

./: .gitignore  Makefile  README.md  log.txt
.github/: FUNDING.yml
archlinux/: PKGBUILD
src/: CMakeLists.txt  audio.cpp  audio.hpp  audio_object.cpp  audio_object.hpp  config.cpp  config.hpp  main.cpp  pa.cpp  pa.hpp  pa_card.cpp  pa_card.hpp  pa_input.cpp  pa_input.hpp  pa_object.cpp  pa_object.hpp  pa_object_attribute.hpp  pa_port.hpp  pa_sink.cpp  pa_sink.hpp  pa_source.cpp  pa_source.hpp  pa_source_output.cpp  pa_source_output.hpp  pulsemixer.cpp  tab.cpp  tab.hpp  ui.cpp  ui.hpp  version.cpp.in  version.hpp  view.cpp  view.hpp
src/cmake/: FindCursesW.cmake
src/cmake.deps/: FetchPandocMan.cmake
src/man/: ncpamixer.1.md
src/pulseaudio/: pa.cpp  pa.hpp  pa_card.cpp  pa_card.hpp  pa_input.cpp  pa_input.hpp  pa_object.cpp  pa_object.hpp  pa_object_attribute.hpp  pa_sink.cpp  pa_sink.hpp  pa_source.cpp  pa_source.hpp  pa_source_output.cpp  pa_source_output.hpp
src/tabs/: configuration.cpp  configuration.hpp  input.cpp  input.hpp  output.cpp  output.hpp  playback.cpp  playback.hpp  recording.cpp  recording.hpp
src/ui/: tab.cpp  tab.hpp  ui.cpp  ui.hpp
src/ui/tabs/: configuration.cpp  configuration.hpp  fallback.cpp  fallback.hpp  input.cpp  input.hpp  output.cpp  output.hpp  playback.cpp  playback.hpp  recording.cpp  recording.hpp
